Add Makefile + Dockerfile
