# backend/docs/swagger.yaml
@@ -25,7 +25,7 @@ definitions:
       password:
         type: string
     type: object
-  model.UserClaim:
+  model.UserVo:
     properties:
       created:
         type: string
@@ -36,7 +36,7 @@ definitions:
       updated:
         type: string
     type: object
-  model.UserVo:
+  security.UserClaim:
     properties:
       created:
         type: string
@@ -96,7 +96,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.UserClaim'
+            $ref: '#/definitions/security.UserClaim'
         "401":
           description: Unauthorized
           schema:
